--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Happy Birthday Website 2.0 | Aoudumber Bade" />
+    <meta name="title" content="Happy Birthday Website 2.0 " />
 
     <title>Adyasha Birthday</title>
     <link rel="stylesheet" href="style.css" />
@@ -70,7 +70,7 @@
         <div class="right">
           <div class="box__account">
             <div class="image">
-              <img src="./images/unnamed.png" alt="" />
+              <img src="./images/moti.png" alt="" />
             </div>
             <div class="name">
               <i class="fa-solid fa-heart"></i>
@@ -126,17 +126,13 @@
       <div class="smiley__icon">
         <img src="./images/smiley_icon.png" alt="" width="100" />
       </div>
-      <audio autoplay loop>
-        <source src="music/birthday.mp3" type="audio/mp3" />
-        Your browser does not support the audio element.
-      </audio>
 
       <div class="boxMail">
         <i class="fa-solid fa-xmark"></i>
         <div class="boxMail-container">
           <div class="card1">
             <div class="userImg">
-              <img src="images/unnamed.png" alt="" />
+              <img src="images/moti.png" alt="" />
             </div>
             <h4 class="username">
               To: Adyasha 💖<span class="underline"></span>
@@ -169,8 +165,21 @@
         </div>
       </div>
     </div>
+    <audio id="bg-music" autoplay loop muted>
+      <source src="music/birthday.mp3" type="audio/mp3" />
+    </audio>
   </body>
   <script>
+    window.addEventListener("load", () => {
+      const audio = document.getElementById("bg-music");
+      setTimeout(() => {
+        audio.muted = false;
+        audio.play().catch((e) => {
+          console.log("Autoplay blocked", e);
+        });
+      }, 500);
+    });
+
     let datetxt = "2 July ";
     let datatxtletter =
       "My BESTIE. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
@@ -202,46 +211,56 @@
 
     var intervalContent;
     var intervalTitle;
-    $("#btn__letter").on("click", function () {
-      $(".box__letter").slideDown();
-      setTimeout(function () {
-        $(".letter__border").slideDown();
-      }, 1000);
-      setTimeout(function () {
-        intervalTitle = setInterval(function () {
-          if (currentIndexTitle < charArrTitle.length) {
-            document.querySelector(".title__letter").textContent +=
-              charArrTitle[currentIndexTitle];
-            let i = document.createElement("i");
-            i.className = "fa-solid fa-heart";
-            document.querySelector(".title__letter").appendChild(i);
-            currentIndexTitle++;
-          } else {
-            clearInterval(intervalTitle);
-          }
-        }, 100);
-      }, 2000);
-      setTimeout(function () {
-        document.querySelector("#heart__letter").classList.add("animationOp");
-        document.querySelector(".love__img").classList.add("animationOp");
-        document.querySelector("#mewmew").classList.add("animationOp");
-      }, 2800);
-      setTimeout(function () {
-        document.querySelectorAll(".heart").forEach((item) => {
-          item.classList.add("animation");
-        });
-      }, 3500);
-      setTimeout(function () {
-        intervalContent = setInterval(function () {
-          if (currentIndexLetter < charArrDateLetter.length) {
-            text__letter.textContent += charArrDateLetter[currentIndexLetter];
-            currentIndexLetter++;
-          } else {
-            clearInterval(intervalContent);
-          }
-        }, 50);
-      }, 6000);
+$("#btn__letter").on("click", function () {
+  const audio = document.getElementById("bg-music");
+  audio.muted = false;
+  audio.play().catch((e) => {
+    console.log("User interaction required to play audio:", e);
+  });
+
+  $(".box__letter").slideDown();
+  setTimeout(function () {
+    $(".letter__border").slideDown();
+  }, 1000);
+
+  setTimeout(function () {
+    intervalTitle = setInterval(function () {
+      if (currentIndexTitle < charArrTitle.length) {
+        document.querySelector(".title__letter").textContent +=
+          charArrTitle[currentIndexTitle];
+        let i = document.createElement("i");
+        i.className = "fa-solid fa-heart";
+        document.querySelector(".title__letter").appendChild(i);
+        currentIndexTitle++;
+      } else {
+        clearInterval(intervalTitle);
+      }
+    }, 100);
+  }, 2000);
+
+  setTimeout(function () {
+    document.querySelector("#heart__letter").classList.add("animationOp");
+    document.querySelector(".love__img").classList.add("animationOp");
+    document.querySelector("#mewmew").classList.add("animationOp");
+  }, 2800);
+
+  setTimeout(function () {
+    document.querySelectorAll(".heart").forEach((item) => {
+      item.classList.add("animation");
     });
+  }, 3500);
+
+  setTimeout(function () {
+    intervalContent = setInterval(function () {
+      if (currentIndexLetter < charArrDateLetter.length) {
+        text__letter.textContent += charArrDateLetter[currentIndexLetter];
+        currentIndexLetter++;
+      } else {
+        clearInterval(intervalContent);
+      }
+    }, 50);
+  }, 6000);
+});
     $(".close").on("click", function () {
       clearInterval(intervalContent);
       document.querySelector(".title__letter").textContent = "";
