--- a/index.html
+++ b/index.html
@@ -27,8 +27,27 @@
   </head>
 
   <body>
-    <div id="wrapper">
-      <div class="flag__birthday">
+
+ <!-- Start Screen -->
+    <div id="start-screen" style="text-align: center; padding: 100px">
+      <h1 style="font-family: 'Dancing Script', cursive; font-size: 40px;">
+        💖 Happy Birthday Adyasha 💖
+      </h1>
+      <button
+        id="start-btn"
+        style="padding: 12px 24px; font-size: 18px; cursor: pointer;"
+      >
+        Click to Start 🎉
+      </button>
+    </div>
+
+
+
+
+
+  <!-- 🎉 Your Main Website Content -->
+  <div id="wrapper" style="display: none;">
+    <div class="flag__birthday">
         <img src="./images/1.png" alt="" width="350" class="flag__left" />
         <img src="./images/1.png" alt="" width="350" class="flag__right" />
       </div>
@@ -166,11 +185,30 @@
         </div>
       </div>
     </div>
+  </div>
     <audio id="bg-music" autoplay loop muted>
       <source src="music/birthday.mp3" type="audio/mp3" />
     </audio>
-  </body>
+
+ </body>
   <script>
+      const startBtn = document.getElementById("start-btn");
+  const audio = document.getElementById("bg-music");
+  const wrapper = document.getElementById("wrapper");
+  const startScreen = document.getElementById("start-screen");
+
+  startBtn.addEventListener("click", () => {
+    // Hide start screen and show the main content
+    startScreen.style.display = "none";
+    wrapper.style.display = "block";
+
+    // Unmute and play music on user interaction
+    audio.muted = false;
+    audio.play().catch((e) => {
+      console.log("Autoplay blocked:", e);
+    });
+  });
+
     window.addEventListener("load", () => {
       const audio = document.getElementById("bg-music");
       setTimeout(() => {
