Initial commit: Add new name in birthday website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Happy Birthday Website 2.0 " />
 
-    <title>Adyasha Birthday</title>
+    <title>PUPU Birthday</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -31,7 +31,7 @@
  <!-- Start Screen -->
     <div id="start-screen" style="text-align: center; padding: 100px">
       <h1 style="font-family: 'Dancing Script', cursive; font-size: 40px;">
-        💖 Happy Birthday Adyasha 💖
+        💖 Happy Birthday PUPU 💖
       </h1>
       <button
         id="start-btn"
@@ -81,7 +81,7 @@
           <div class="btn">
             <button id="btn__letter">
               <div class="mail">
-                Click Here Adyasha
+                Click Here PUPU
                 <i class="fa-regular fa-envelope"></i>
               </div>
             </button>
@@ -94,7 +94,7 @@
             </div>
             <div class="name">
               <i class="fa-solid fa-heart"></i>
-              <span>Oyee Adyasha</span>
+              <span>Oyee PUPU</span>
               <i class="fa-solid fa-heart"></i>
             </div>
             <div class="balloon_one">
@@ -155,7 +155,7 @@
               <img src="images/moti.png" alt="" />
             </div>
             <h4 class="username">
-              To: Adyasha 💖<span class="underline"></span>
+              To: PUPU 💖<span class="underline"></span>
             </h4>
 
             <h3>Happy Birthday</h3>
