--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
             <div class="card2-content">
               <h3>To You!</h3>
               <h2>
-                Happy birthday 🥳🎂🥳 moti the day you come into my life I was
+                Happy birthday 🥳🎂🥳 didi the day you come into my life I was
                 not really much attached to you but day by day you became close
                 to my heart . And now you are truly my priority. I wish I could
                 remove some of the pain from your life which you are bearing
                 alone. But you're always welcome 🤗 you can talk anytime you
                 want to talk specially those which you can't say to others. And
                 this year your all dreams come true . I am wishing you happy
-                birthday 🎈🎂🎈 Moti . Don't be Sad ok be happy enjoy buddy 😌
+                birthday 🎈🎂🎈 didi. Don't be Sad ok be happy enjoy buddy 😌
               </h2>
 
               <div class="imageCute2">
